[package]
name = "rustc_driver"
version = "0.0.0"
edition = "2024"

[dependencies]
jiff = { version = "0.2.5", default-features = false, features = ["std"] }
# tidy-alphabetical-start
rustc_abi = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_ast = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_ast_lowering = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_ast_passes = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_ast_pretty = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_attr_parsing = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_borrowck = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_builtin_macros = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_codegen_ssa = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_const_eval = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_data_structures = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_errors = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_expand = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_feature = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_fluent_macro = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_hir_analysis = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_hir_pretty = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_hir_typeck = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_incremental = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_index = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_infer = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_interface = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_lint = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_log = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_macros = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_metadata = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_middle = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_mir_build = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_mir_dataflow = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_mir_transform = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_monomorphize = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_parse = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_passes = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_pattern_analysis = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_privacy = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_public = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_query_system = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_resolve = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_session = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_span = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_target = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_trait_selection = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
rustc_ty_utils = { git = "https://github.com/rust-lang/rust", rev = "bf5e6cc7a7a7eb03e3ed9b875d76530eddd47d5f" }
serde_json = "1.0.59"
shlex = "1.0"
tracing = { version = "0.1.35" }
# tidy-alphabetical-end

[target.'cfg(all(unix, any(target_env = "gnu", target_os = "macos")))'.dependencies]
# tidy-alphabetical-start
libc = "0.2"
# tidy-alphabetical-end

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.0"
features = [
    "Win32_System_Diagnostics_Debug",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# tidy-alphabetical-start
ctrlc = "3.4.4"
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
check_only = ['rustc_interface/check_only']
llvm = ['rustc_interface/llvm']
max_level_info = ['rustc_log/max_level_info']
rustc_randomized_layouts = [
    'rustc_index/rustc_randomized_layouts',
    'rustc_middle/rustc_randomized_layouts'
]
# tidy-alphabetical-end
